apps/juiceshop/juiceshop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  juiceshop
  namespace: juiceshop
  labels:
    app:  juiceshop
spec:
  selector:
    matchLabels:
      app: juiceshop
  replicas: 1
  template:
    metadata:
      labels:
        app:  juiceshop
    spec:
      containers:
      - name:  juiceshop
        image:  bkimminich/juice-shop:v19.0.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  3000
          name:  http
      restartPolicy: Always
