apps/juiceshop/juiceshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juiceshop
  namespace: juiceshop
spec:
  selector:
    app: juiceshop
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
