apps/juiceshop/juiceshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juiceshop-ingress
  namespace: juiceshop
spec:
  ingressClassName: nginx
  rules:
  - host: juiceshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juiceshop
            port:
              number: 3000
